--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.1.0
-  meta: ^1.9.1
-  platform: ^3.1.3
+  http: ^0.13.4
+  meta: ^1.7.0
+  platform: ^3.0.0
+  ios_open_subscriptions_settings: ^0.0.4
 
 dev_dependencies:
   flutter_test:
